// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders default variant unchanged 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 bg-primary border-transparent"
>
  <Text
    className="text-xs font-medium text-primary-foreground"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    Default
  </Text>
</View>
`;

exports[`Badge renders icon when icon prop is provided: with-icon 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--act)/0.10)]"
>
  <Text />
  <Text
    className="text-xs font-medium text-[hsl(var(--act))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    CBT
  </Text>
</View>
`;

exports[`Badge renders tint variant for act: tint-act 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--act)/0.10)]"
>
  <Text
    className="text-xs font-medium text-[hsl(var(--act))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    act
  </Text>
</View>
`;

exports[`Badge renders tint variant for aqua: tint-aqua 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--aqua)/0.10)]"
>
  <Text
    className="text-xs font-medium text-[hsl(var(--aqua))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    aqua
  </Text>
</View>
`;

exports[`Badge renders tint variant for be: tint-be 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--be)/0.10)]"
>
  <Text
    className="text-xs font-medium text-[hsl(var(--be))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    be
  </Text>
</View>
`;

exports[`Badge renders tint variant for clay: tint-clay 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--clay)/0.10)]"
>
  <Text
    className="text-xs font-medium text-[hsl(var(--clay))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    clay
  </Text>
</View>
`;

exports[`Badge renders tint variant for ink: tint-ink 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--ink)/0.10)]"
>
  <Text
    className="text-xs font-medium text-[hsl(var(--ink))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    ink
  </Text>
</View>
`;

exports[`Badge renders tint variant for iris: tint-iris 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--iris)/0.10)]"
>
  <Text
    className="text-xs font-medium text-[hsl(var(--iris))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    iris
  </Text>
</View>
`;

exports[`Badge renders tint variant for mist: tint-mist 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--mist)/0.10)]"
>
  <Text
    className="text-xs font-medium text-[hsl(var(--mist))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    mist
  </Text>
</View>
`;

exports[`Badge renders tint variant for primary: tint-primary 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-primary/10"
>
  <Text
    className="text-xs font-medium text-primary"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    primary
  </Text>
</View>
`;

exports[`Badge renders tint variant for think: tint-think 1`] = `
<View
  className="group shrink-0 flex-row items-center justify-center gap-1 overflow-hidden rounded-full border px-2 py-0.5 border-transparent bg-[hsl(var(--think)/0.10)]"
>
  <Text
    className="text-xs font-medium text-[hsl(var(--think))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    think
  </Text>
</View>
`;
